# delai

./: LICENSE  README.md  pyproject.toml  requirements.txt
delai-frontend/: README.md  next.config.ts  package-lock.json  package.json
delai-frontend/src/app/: layout.tsx  page.tsx
delai-frontend/src/components/: app-sidebar.tsx  demand-forecasting.tsx  download-files.tsx  incidents.tsx  route-optimization.tsx  start-page.tsx
delai-frontend/src/components/incidents/: VehiclesMap.tsx
delai-frontend/src/components/optimization/: GoogleMapsHeatmap.tsx  OptimizationDrawer.tsx  TransferOptimization.tsx
delai-frontend/src/components/spatial-analysis/: accessibility-analysis.tsx  density-analysis.tsx  stop-planning.tsx
delai-frontend/src/data/: route-optimization.ts
delai-frontend/src/types/: route-optimization.ts
otp-frontend-delai/: README.md  next.config.ts  package-lock.json  package.json
otp-frontend-delai/src/app/: layout.tsx
otp-frontend-delai/src/components/: index.ts
otp-frontend-delai/src/hooks/: useLocalStorage.ts  useMediaQuery.ts  usePlaceSearch.ts  usePlanTrip.ts  useReverseGeocode.ts
otp-frontend-delai/src/styles/: globals.css  map-cursor.css  variables.css
src/delai/: __init__.py  __main__.py  api.py  config.py  service.py
src/delai/processors/: __init__.py  alerts.py  archive.py  realtime.py  realtime_merge.py  static_gtfs.py
src/delai/sources/: __init__.py  base.py  gtfs_krakow.py
src/delai/utils/: io.py
tests/: test_alerts_processing.py  test_api.py  test_realtime_merge.py  test_service.py  test_static_gtfs.py
(+20 files in other folders)
